[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/game.gd" type="Script" id=1]
[ext_resource path="res://objects/ball/ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/wall/wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/area/area.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/midfield/midfield.tscn" type="PackedScene" id=6]

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 400, 300 )

[node name="player_1" parent="." instance=ExtResource( 3 )]
position = Vector2( 20, 300 )

[node name="player_2" parent="." instance=ExtResource( 3 )]
position = Vector2( 780, 300 )
type = 1

[node name="top_wall" parent="." instance=ExtResource( 4 )]
position = Vector2( 400, 5 )

[node name="bottom_wall" parent="." instance=ExtResource( 4 )]
position = Vector2( 400, 595 )

[node name="area" parent="." instance=ExtResource( 5 )]
visible = false

[node name="midfield" parent="." instance=ExtResource( 6 )]
position = Vector2( 400, 300 )

[node name="reset_ball_timer" type="Timer" parent="."]
